# Serial-delay

./: .gitignore  CMakeLists.txt  README.md  main.cpp
chips/: info.csv
chips/CH340C/: data.txt
chips/CH347T/: data.txt
chips/CH9102/: data.txt
chips/CH9340C/: data.txt
chips/FT232BL/: data.txt
chips/FT232H/: data.txt
chips/FT232R/: data.txt
chips/PL2303GC/: data.txt
chips/RP2040/: data.txt
data/: CH341A.txt  CH382L.txt  CP2102.txt  onboard_1st.txt  onboard_2nd.txt  onboard_3rd.txt
